--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.1",
+    "jest-transform-stub": "^2.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
@@ -31,5 +32,11 @@
   },
   "dependencies": {
     "jest-environment-jsdom": "^28.1.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
+    }
   }
 }
